Fix margins on site
Margins got messed up in a previous commit, so the value was changed to what it was previously.

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -67,7 +67,7 @@
 }
 
 .main-content {
-  margin: 8%;
+  margin: 24px;
   @media (max-width: 60%) {
     margin: 10%;
   }
